--- a/wp-content/themes/litmap/styles/main.scss
+++ b/wp-content/themes/litmap/styles/main.scss
@@ -1,3 +1,7 @@
+html {
+  font-family: 'Open Sans', sans-serif;
+}
+
 .header {
 
 }
@@ -11,6 +15,11 @@
   background-color: #000;
 }
 
-.map-sidebar {
+.map-container {
+  width: 100%;
+}
 
+.map-sidebar {
+  width: 25%;
+  background-color: #385074;
 }
