--- a/wp-content/themes/litmap/styles/main.css
+++ b/wp-content/themes/litmap/styles/main.css
@@ -3,8 +3,26 @@ html {
 	font-size: 14px;
 }
 
+.header {
+	width: 100%;
+	height: 90px;
+	padding: 10px;
+	background-color: #000;
+	color: #fff;
+	text-align: center;
+}
+
+.header a {
+	color: inherit;
+	text-decoration: none;
+	text-transform: uppercase;
+}
+
 .main {
+	position: relative;
 	display: flex;
+	flex: 1 0 auto;
+	height: calc(100vh - 90px);
 }
 
 .filters {
@@ -14,10 +32,25 @@ html {
 
 .map-container {
 	width: 100%;
+	height: 100%;
+}
+
+.map {
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+
+.map__frame {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	overflow: hidden;
 }
 
 .map-sidebar {
 	width: 25%;
+	height: 100%;
 	padding: 25px 15px;
 	color: #fff;
 	background-color: #385074;
@@ -30,6 +63,59 @@ html {
 
 .map-sidebar__part_preview {
 	display: none;
+}
+
+.item-popup {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #f3f3f3;
+}
+
+.item-popup__close {
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	cursor: pointer;
+}
+
+.item-popup__close svg {
+	width: 30px;
+}
+
+.item-popup__container {
+	display: flex;
+	flex-flow: column;
+	height: 100%;
+}
+
+.item-popup__title {
+	padding: 10px;
+	font-size: 40px;
+	text-transform: uppercase;
+	color: #fff;
+	font-weight: 600;
+	text-align: center;
+}
+
+.item-popup__content {
+	position: relative;
+	display: flex;
+	padding: 40px;
+	overflow: hidden;
+}
+
+.item-popup__description {
+	padding-right: 20px;
+	overflow-y: auto;
+}
+
+.item-popup__image {
+	margin-left: auto;
+	max-width: 25%;
 }
 
 /*# sourceMappingURL=main.css.map */
