--- a/wp-content/themes/litmap/styles/main.scss
+++ b/wp-content/themes/litmap/styles/main.scss
@@ -4,11 +4,24 @@ html {
 }
 
 .header {
-
+  width: 100%;
+  height: 90px;
+  padding: 10px;
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  a {
+    color: inherit;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
 }
 
 .main {
+  position: relative;
   display: flex;
+  flex: 1 0 auto;
+  height: calc(100vh - 90px);
 }
 
 .filters {
@@ -18,10 +31,24 @@ html {
 
 .map-container {
   width: 100%;
+  height: 100%;
+}
+
+.map {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  &__frame {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+  }
 }
 
 .map-sidebar {
   width: 25%;
+  height: 100%;
   padding: 25px 15px;
   color: #fff;
   background-color: #385074;
@@ -33,5 +60,51 @@ html {
     &_preview {
       display: none;
     }
+  }
+}
+
+.item-popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #f3f3f3;
+  &__close {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    cursor: pointer;
+    svg {
+      width: 30px;
+    }
+  }
+  &__container {
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+  }
+  &__title {
+    padding: 10px;
+    font-size: 40px;
+    text-transform: uppercase;
+    color: #fff;
+    font-weight: 600;
+    text-align: center;
+  }
+  &__content {
+    position: relative;
+    display: flex;
+    padding: 40px;
+    overflow: hidden;
+  }
+  &__description {
+    padding-right: 20px;
+    overflow-y: auto;
+  }
+  &__image {
+    margin-left: auto;
+    max-width: 25%;
   }
 }
