--- a/wp-content/themes/litmap/styles/main.css
+++ b/wp-content/themes/litmap/styles/main.css
@@ -69,8 +69,77 @@ html {
 }
 
 .map-container {
+	display: flex;
+	flex-flow: column;
 	width: 100%;
 	height: 100%;
+}
+
+.search {
+	width: 100%;
+	position: relative;
+	display: flex;
+	background-color: #fff;
+	box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 4px -1px;
+	z-index: 1;
+}
+
+.search__input {
+	width: 100%;
+	border: none;
+	padding: 0 10px;
+	height: 36px;
+	outline: none;
+	color: #666;
+	transition: color 0.3s;
+}
+
+.search__input:focus {
+	color: #333;
+}
+
+.search__submit, .search__reset {
+	width: 40px;
+	height: 36px;
+	text-align: center;
+	color: #666;
+	background-color: transparent;
+	border: 0;
+	cursor: pointer;
+	font-size: 20px;
+	outline: none;
+	transition: color 0.3s;
+	flex: none;
+}
+
+.search__submit:hover, .search__reset:hover {
+	color: #333;
+}
+
+.search__reset {
+	display: none;
+}
+
+.search__results {
+	display: none;
+	position: absolute;
+	box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 4px -1px;
+	color: #333;
+	top: 100%;
+	z-index: 1;
+	background: #fff;
+	width: 100%;
+	max-height: 300px;
+	overflow-y: auto;
+}
+
+.search-result-item {
+	padding: 10px;
+	cursor: pointer;
+}
+
+.search-result-item + .search-result-item {
+	border-top: 1px solid #e6e6e6;
 }
 
 .map {
@@ -111,6 +180,7 @@ html {
 	width: 100%;
 	height: 100%;
 	background-color: #f3f3f3;
+	z-index: 9;
 }
 
 .item-popup__close {
@@ -154,6 +224,37 @@ html {
 .item-popup__image {
 	margin-left: auto;
 	max-width: 25%;
+}
+
+@keyframes bounce {
+	from {
+		transform: scale(1);
+	}
+	to {
+		transform: scale(1.1);
+	}
+}
+
+.ajax-loader {
+	display: none;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, 0.4);
+	z-index: 9;
+}
+
+.ajax-loader__icon {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	width: 200px;
+	height: 200px;
+	margin-top: -100px;
+	margin-left: -100px;
+	animation: bounce 0.5s infinite alternate;
 }
 
 /*# sourceMappingURL=main.css.map */
