--- a/wp-content/themes/litmap/styles/main.scss
+++ b/wp-content/themes/litmap/styles/main.scss
@@ -1,16 +1,21 @@
 html {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
+  font-family: 'Playfair Display', serif;
+  font-size: 15px;
 }
 
 .header {
   width: 100%;
   height: 90px;
   padding: 10px;
-  background-color: #000;
+  background-color: rgb(56, 55, 55);
   color: #fff;
   text-align: center;
+
   a {
+    -webkit-text-fill-color: transparent;
+    background: -webkit-linear-gradient(rgb(236, 252, 244), rgb(14, 206, 180));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     color: inherit;
     text-decoration: none;
     text-transform: uppercase;
@@ -28,7 +33,8 @@ html {
   display: flex;
   align-items: center;
   width: 100px;
-  background-color: #000;
+  background-color: rgb(56, 55, 55);
+
   &__list {
     width: 100%;
   }
@@ -168,20 +174,24 @@ html {
   height: 100%;
   background-color: #f3f3f3;
   z-index: 9;
+
   &__close {
     position: absolute;
     top: 5px;
     right: 5px;
     cursor: pointer;
+
     svg {
       width: 30px;
     }
   }
+
   &__container {
     display: flex;
     flex-flow: column;
     height: 100%;
   }
+
   &__title {
     padding: 10px;
     font-size: 40px;
@@ -190,16 +200,19 @@ html {
     font-weight: 600;
     text-align: center;
   }
+
   &__content {
     position: relative;
     display: flex;
     padding: 40px;
     overflow: hidden;
   }
+
   &__description {
     padding-right: 20px;
     overflow-y: auto;
   }
+
   &__image {
     margin-left: auto;
     max-width: 25%;
